--- a/chrome-ext/src/index.css
+++ b/chrome-ext/src/index.css
@@ -6,7 +6,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   min-width: 400px;
-  min-height: 700px;
+  min-height: 400px;
+  padding: 10px;
 }
 
 code {
