--- a/frontend/src/components/auth/SignIn.css
+++ b/frontend/src/components/auth/SignIn.css
@@ -1,3 +1,12 @@
+:root {
+  --GREEN:#d0dca4;
+  --ORANGE:#ffac74;
+  
+  --GREY:#d0cccc;
+  --BROWN:#682c1c;
+  }
+  
+
 .sign-in-container {
     display: flex;
     justify-content: center;
@@ -18,10 +27,10 @@
 
 .vertical-line {
     position: absolute;
-    top: 32vh;
+    top: 30vh;
     bottom: 0;
     left: 50%;
-    border-left: 2px solid #ccc; 
+    border-left: 2px solid  var(--BROWN); 
     height: 25%;
   }
 
